[package]
name = "bevy_tiny_data_flow"
version = "0.1.0"
edition = "2021"
categories = [ "game-development" ]
description = "Tiny crate to add data-flow like system ordering for Bevy."
exclude = [ "assets/" ]
keywords = [ "gamedev", "bevy" ]
readme = "README.md"
repository = "https://github.com/hyranno/bevy_tiny_data_flow"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12" }
tiny_utils_proc_macros = { path = "macros" }
